package if5.datasystems.core.models.streamingGraph;

import lombok.Data;

@Data public class Label {
  private String label;
}
